fix issue with buttons being too large on safari

--- a/jedmcpherson/src/App.less
+++ b/jedmcpherson/src/App.less
@@ -219,14 +219,11 @@
 
 
                 .link {
-                    text-align: center;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
+
                     width: 92%;
                     background-color: @landingPageSecondary;
                     margin: 1vh 4% 1vh 4%;
-                    height: 10vh;
+                    height: 6vh;
                     // overflow: scroll;
                     border-radius: .5rem;
                     cursor: pointer;
